<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".35"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/id"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="1.5"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calories"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/current_amount"/>
    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:id="@+id/frame_layout"></FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/food_manage_button"
            android:text="@string/foods"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:onClick="managefoods"
            android:background="@android:color/holo_red_light"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:onClick="activi_manage"
            android:text="@string/physical_activities"/>


    </LinearLayout>

</LinearLayout>