<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/walking"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/hiking"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/swimming"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/weight_lifting"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

</LinearLayout>