<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/calories_per_hour"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="@string/current_amount"/>




    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/Actilist_list"
        >




    </ListView>


</LinearLayout>