<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:id="@+id/bmitext"
                android:fontFamily="casual"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/rcweighttext"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:background="@color/fruitcolor"
                android:fontFamily="casual"/>




        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textAllCaps="false"

            android:text="@string/bmical"
            android:onClick="gotobmi"
            android:background="@color/button"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:id="@+id/req_caloritext"
        android:fontFamily="casual"
        android:textColor="@android:color/black"
        android:background="@color/back2"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/current_calorie"
            android:gravity="center"

            android:background="@color/back"

            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="25sp"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:background="@color/back1"
            android:id="@+id/current_calorie_text"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:text="@string/manage_calorie"
            android:textAllCaps="false"
            android:onClick="manageclories"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".250"
        android:text="@string/more"
        android:background="@android:color/holo_orange_light"
        android:onClick="start_more_activity"/>

</LinearLayout>